--- a/src/main/resources/main/visuile/Main.fxml
+++ b/src/main/resources/main/visuile/Main.fxml
@@ -16,7 +16,7 @@
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: black;">
          <children>
              <AreaChart fx:id="spectrum" alternativeRowFillVisible="false" animated="false" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" legendVisible="false" prefHeight="475.0" prefWidth="800.0" styleClass="bar-chart" verticalGridLinesVisible="false" verticalZeroLineVisible="false">              <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis side="BOTTOM" tickLabelsVisible="false" tickMarkVisible="false" />
               </xAxis>
                  <yAxis>
                      <NumberAxis animated="false" autoRanging="false" minorTickVisible="false" side="LEFT" tickLabelsVisible="false" tickMarkVisible="false" upperBound="55.0" visible="false" />
@@ -37,6 +37,7 @@
             <Button fx:id="styleForward" layoutX="756.0" layoutY="81.0" mnemonicParsing="false" onAction="#styleForward" text="▶" />
             <Button fx:id="styleBack" layoutX="719.0" layoutY="81.0" mnemonicParsing="false" onAction="#styleRewind" text="◀" />
             <Slider fx:id="volumeSlider" layoutX="435.0" layoutY="85.0" max="200.0" minorTickCount="1" onDragDetected="#adjustVolume" prefHeight="16.0" prefWidth="278.0" showTickMarks="true" snapToTicks="true" value="100.0" />
+            <Button fx:id="addSong" layoutX="756.0" layoutY="47.0" mnemonicParsing="false" onAction="#openFile" text="+" />
          </children></AnchorPane>
   </items>
 </SplitPane>
